# Utilities

MD-converter/: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  package-lock.json  package.json  pdf_pptx_to_markdown_web_app_spec.md
MD-converter/apps/api/: pyproject.toml
MD-converter/apps/api/app/: __init__.py  main.py
MD-converter/apps/api/app/core/: __init__.py  config.py
MD-converter/apps/api/app/db/: __init__.py  base.py  models.py  session.py
MD-converter/apps/api/app/models/: __init__.py  schemas.py
MD-converter/apps/api/app/routes/: conversions.py  health.py  uploads.py
MD-converter/apps/api/app/services/: __init__.py  jobs.py  queue.py  storage.py
MD-converter/apps/api/tests/: test_health.py  test_phase1_flow.py
MD-converter/apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
MD-converter/apps/workers/: pyproject.toml
MD-converter/apps/workers/app/: __init__.py  celery_app.py  settings.py
MD-converter/apps/workers/app/converters/: __init__.py  phase1.py  phase2.py
MD-converter/apps/workers/app/db/: __init__.py  models.py  session.py
MD-converter/apps/workers/app/storage/: __init__.py  s3.py
MD-converter/apps/workers/app/tasks/: document.py
MD-converter/apps/workers/tests/: test_phase2_pipeline.py  test_task_registration.py
MD-converter/docs/: architecture.md  local-implementation-phases.md  runbook.md  test-corpus.md
MD-converter/infra/: Dockerfile.api  Dockerfile.web  Dockerfile.worker  docker-compose.yml
MD-converter/migrations/: env.py
MD-converter/migrations/versions/: 0001_phase1_initial_tables.py  0002_phase2_conversion_batches.py
MD-converter/scripts/: compose-config.ps1  stack-up.ps1  start-api.ps1  start-dev.ps1  start-web.ps1  test-all.ps1  test-api.ps1  test-workers.ps1
(+9 files in other folders)
